[package]
name = "someplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "someplace"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.0"
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
arrayref = "~0.3.6"
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
solana-program = "~1.9.5"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
serde = { version = "1.0.122", features = ["derive"] }
