[package]
name = "example"
version = "0.1.0"
authors = ["Armani Ferrante <armaniferrante@gmail.com>"]
rust-version = "1.56"
edition = "2021"

[workspace]

[dependencies]
sdk = { path = "../../sdk/rust/client", features = ["debug"] }
shellexpand = "2.1.0"
anyhow = "1.0.32"
rand = "0.7.3"
clap = { version = "3.0.0-rc.0", features = ["derive"] }
solana-sdk = "1.7.16"
serde_json = "1.0"
