[package]
name = "hello"
version = "0.1.0"
authors = ["Dominic DiGiacomo <ddigiacomo@triptychlabs.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace]

[dependencies]
wasm-bindgen = "0.2.63"
sdk = { path = "../../sdk/rust/client", features = ["debug"] }
serde_json = "1.0"
anyhow = "1.0.32"
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3.57"
web-sys = "0.3.57"
someplace = { path = "../../contracts/someplace", features = ["no-entrypoint"] }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
surf = { git = "https://github.com/media-io/surf", features = ["native-client"], default-features = false}
base64 = "0.13.0"
